welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:10: error: overriding method avance in class SimpleBuggle of type ()Unit;
 method avance needs `override' modifier
def avance() = {
    ^ColumnByColumn:10: error: overriding method avance in class AbstractBuggle of type ()Unit;
 method avance needs `override' modifier
def avance() = {
    ^